still fixing the html and mathing the class container with stylesheet. need to change all the image sizing to ems or percentages instead of pixels to satisfy responsive design. not going to worry too much about extensive styling, just so long as i meet the required deliverables especially the media queries

--- a/pub/css/main.css
+++ b/pub/css/main.css
@@ -122,12 +122,9 @@ UPDATE with main.css*/
  position:relative;
 }
 
-header ul {
-    padding-left:0;
-}
-
  .navbar {
     margin:0 auto;
+    padding-left:0;
     text-align:center;
     color:white;
 }
@@ -140,7 +137,6 @@ header ul {
     position:relative;
     text-align:center;
     }
-/* removed the call to the wave icon bc the style in the html may be interfering with the css rendering */
 
 a {
     color:white;
@@ -172,7 +168,6 @@ a {
 }
 
 .datetime {
-
 }
 
 .buttons {
@@ -210,6 +205,9 @@ a {
     position:relative;
 }
 
+.copyRight{
+}
+/*
 .tiylogo{
     position:relative;
     text-align:center;
@@ -217,6 +215,7 @@ a {
     padding-right:23%
 
 }
+*/
 
 
 
